Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -1157,13 +1157,13 @@ A high-quality HNSCC dataset (with protein-coding gene expression and survival d
 \subsection{Limitations of Current HNSCC Therapy}
 
 \thispagestyle{headings}
-\markright{Discussion \hfill Poor Survival Rate of HNSCC patients \hfill}
+\markright{Discussion \hfill Poor survival rate of HNSCC patients \hfill}
 
 \begin{minipage}[c]{0.40\linewidth}
 \begin{outline}
     \1 Despite the improvements in those interventions, the survival of \acrshort{hnscc} has improved only marginally over the past decade worldwide~\cite{hpa2019}.
     \1 The five-year survival rate is under \hl{60\%}.
-    \1 To find more \hl{unknown pieces of puzzle}, which impact on survival.
+    \1 To find more \hl{unknown pieces of a puzzle}, which impact survival.
 \end{outline}
 \end{minipage}%\hspace{2mm}
 %\begin{wrapfigure}{r}{0.3\textwidth}
@@ -1182,13 +1182,15 @@ A high-quality HNSCC dataset (with protein-coding gene expression and survival d
 \subsubsection{Holistic Cancer Care} 
 
 \thispagestyle{headings}
-\markright{Discussion \hfill Holistic Cancer Care \hfill}
+\markright{Discussion \hfill Holistic cancer care \hfill}
 
-The unknown pieces of puzzle
+Holistic (whole) care: to care \hl{spirit}, \hl{emotion}, \hl{the body} of a person, and his \hl{social} relation.
+
+It is the unknown piece of the puzzle in cancer care.
 
 \begin{figure}[ht]
 
-\begin{minipage}[c]{0.60\linewidth}
+\begin{minipage}[c]{0.50\linewidth}
 %\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.25\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
 %\centering
 
@@ -1204,19 +1206,19 @@ The unknown pieces of puzzle
 %\includegraphics[width=10cm]{Figure_5_holisticCare.pdf}
 \end{minipage}
 \hfill
-\begin{minipage}[c]{0.35\linewidth}
+\begin{minipage}[c]{0.40\linewidth}
 %{\caption{
 %The concept of holistic care for \acrshort{hnscc} patients. %MDPI: please confirm if the extra lines and frame need to be deleted.
 
-Beyond carcinogenesis\\
-the mind--brain--body axis~\cite{Hsiao2012}
+Beyond carcinogenesis:\\
+\hl{The mind--brain--body axis}~\cite{Hsiao2012}
 
 \begin{outline}
 \1 stress %ful environment(giant \textcolor{black}{black} arrow) 
-will trigger an emotional response
-\1 brain releases stress hormones and inflammation signals% in response to negative emotions.
+will trigger an emotional response in mind
+\1 brain releases stress hormones and inflammation signals in cells% in response to negative emotions.
 \1 %The  body's internal environment (cells) 
-altering epigenetic control in gene regulation and mRNA expression of cells
+altering epigenetic control in gene regulation and mRNA/miRNA expression %of cells
 %Over a long time, the tissue/cells will be transformed into dysplasia and then 
 \1 carcinogenesis~\cite{Lutgendorf2010,Powell2013,Iftikhar2021} with help from known carcinogens
 \end{outline}
@@ -1250,11 +1252,13 @@ altering epigenetic control in gene regulation and mRNA expression of cells
 \begin{minipage}[c]{0.45\linewidth}
 Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:  
 \begin{outline}
-\1 to support cancer patients' spiritual, emotional, physical, and socioeconomic needs
-\1 to give the physical care: medication therapy or surgery. 
-\1 therapeutic relationship (TR)~\cite{Rogers1979}, the physicians' spiritual properties (empathy, sympathy, and compassion) will engage cancer patients
-\1 to induce their self-compassion to gain resilience against the disease through their mind--brain--body axis~\cite{Hsiao2012}
-%Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.
+\1 to give the physical care: systemic therapy (drug) or surgery
+%\1 to support cancer patients' spiritual, emotional, physical, and socioeconomic needs
+
+\1 \hl{therapeutic relationship (TR)}~\cite{Rogers1979}, the physicians' spiritual properties \hl{(empathy, sympathy, and compassion)} will engage cancer patients
+\1 to induce their \hl{self-compassion} to gain \hl{resilience against} the disease through their mind--brain--body axis~\cite{Hsiao2012}
+\1 to reduce pain, to promote healing from cancer
+
 \end{outline}
 
 \end{minipage}
@@ -1268,13 +1272,18 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 
 \section*{Conclusions} % 5
 \thispagestyle{headings}
-\markright{Conclusions \hfill Physical Care \hfill}
+\markright{Conclusions \hfill Physical care \hfill}
 
 \begin{outline}
-\1 Three biomarker candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrlong{os}.
+
 \1 The microenvironment of HNSCC, influenced by the mind--brain--body axis~\cite{Hsiao2012}
-    \2 further exploration and understanding using holistic multi-parametric approaches
-    \2 the \acrshort{tcga} must collect those "holistic features" for further study of personalized medicine
+    \2 Three \hl{biomarker} candidates---CAMK2N1, CALML5, and FCGBP---which are all heavily associated with the prognosis of \acrlong{os}.
+    \2 further exploration and understanding using \hl{holistic} multi-parametric approaches
+\1 Good using a placebo effect in HNSCC cancer care
+    \2 dorsolateral prefrontal cortex\cite{Carlino2011} is the origin of a placebo effect
+    \2 Confidence/trust (i.e., \hl{TR}) might promote healing through a mind--brain--body connection manner
+    
+    
 
 \end{outline}
 
@@ -1282,15 +1291,19 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 \clearpage
 
 \thispagestyle{headings}
-\markright{Conclusions \hfill Spiritual Care \hfill}
+\markright{Conclusions \hfill Spiritual care \hfill}
 
 \begin{outline}
 
-\1 Good using placebo effect
-    \2 the confidence might promote healing through a mind--brain--body connection manner
-\1 More holistic features in HNSCC dataset
-\1 Mindfulness meditation is helpful to cancer patients
-    \2 confess for not taking care of their bodies and spirits in the past
+
+%\1 More holistic features in HNSCC dataset
+\1 The \acrshort{tcga} must collect those "holistic features" for further \hl{holistic biomarker} of personalized medicine
+    \2 electric healthcare records (EHR)
+    \2 \hl{spiritual assessment} (the meaning of life, hope, love/be loved, forgive/be forgiven, relationship with the Most High)
+    %Thus, we suggest that electric healthcare records (EHR) should include physical, pathological, and psychological data, and even more spiritual information. The \acrshort{tcga} might collect those "holistic features"  (\textcolor{green}{green} dashed line) for further study of personalized medicine.
+\1 A \hl{professional spiritual caregiver} 
+    \2 \hl{Mindfulness meditation} is helpful to cancer patients
+    \2 confess for not taking care of their bodies and spirits in the past (\hl{causality})
     \2 give sincere thanks for their physical body's hard work
 \end{outline}
 
@@ -1308,6 +1321,22 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 %"每一位患者都有自癒能力， 我們知情之後， 也要逐步讓他本人知情， 看見之後， 在良好的「治療關係」中， 協助他們漸漸找回自己的療癒。（以他們自己的腳步）"
 %解說：患者的自癒力就是復原力（resilience),  強調「治療關係」（安全、 信任、 分享權力、 自決） 以及”知情”(暸解過往創傷經驗對自身的影響，進而開始療癒的過程）的重要性。
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\clearpage
+\thispagestyle{headings}
+\markright{Conclusions \hfill An example of holistic assessment in dental record \hfill}
+
+\includegraphics[height=6.5cm, width=6.5cm]{Holistic_EHR_TMUH_English.pdf}\hfill
+\includegraphics[height=4.5cm,width=7.5cm]{Holistic_EHR_TMUH_Chinese.pdf}
+
+
+\clearpage
+
+%%%%
+\section{Take Home Message}
+%\thispagestyle{headings}
+%\markright{Take home message \hfill  \hfill}
+\includegraphics[width=14.5cm]{PCA_CarlRogers.pdf}
+
 \clearpage
 %%%%%%%
 \thispagestyle{headings} % No slide header and footer
