--- a/keynote.tex
+++ b/keynote.tex
@@ -84,9 +84,10 @@ parskip=half-, % Paragraphs separated by half a line
 \usepackage{makecell}
 % \usepackage{array}
 \usepackage{multirow}
-\usepackage{colortbl}
+\usepackage{colortbl}     % arrayrulecolor
 \usepackage{hhline}
-\usepackage{siunitx} % for  1e-10 scientific notation
+%\usepackage{soul} % for \hl{}
+\usepackage{siunitx} % for  1e-10 scientific notation, \num
 %\usepackage{caption}
 %\usepackage{subcaption}
 %\usepackage{subcaption} % for figure  side by side, subfigure
@@ -375,7 +376,7 @@ parskip=half-, % Paragraphs separated by half a line
 \newcommand*{\myauthor}{Li-Hsing (Tex) Chi} % Presenters name(s)
 \newcommand*{\myadvisorM}{Michael Hsiao}
 \newcommand*{\myadvisorJ}{Yu-Chuan (Jack) Li}
-\newcommand*{\mydate}{2021/08/23} %{\today} % Presentation date {2021/09/10}
+\newcommand*{\mydate}{2021/09/10} %{\today} % Presentation date {2021/09/10}
 \newcommand*{\myuni}{Taipei Medical University} % University or department
 
 %----------------------------------------------------------------------------------------
@@ -388,6 +389,8 @@ parskip=half-, % Paragraphs separated by half a line
 
 % Title slide - you may have to tweak a few of the numbers if you wish to make changes to the layout
 \thispagestyle{empty} % No slide header and footer
+
+
 \begin{tikzpicture}[remember picture,overlay] % Background box
   \node [xshift=\paperwidth/2,yshift=\paperheight/2] at (current page.south west)
     [rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=\paperheight/1.7,top color=myblue,bottom color=myblue]{}; % Change the height of the box, its colors and position on the page here
@@ -407,6 +410,7 @@ parskip=half-, % Paragraphs separated by half a line
 \end{flushright}
 %Chi, L.-H., Wu, A. T. H., Hsiao, M. \& Li, Y.-C. (Jack). Journal of Personalized Medicine, 11, 782 (2021).
 %\cite{Chi2021}
+\includegraphics[width=7cm]{TMU_PTM_logo.png}
 
 \large \hspace{5cm} A Holistic Way for Cancer Care
 
@@ -1334,10 +1338,10 @@ Holistic cancer care~\cite{Mehta2019,Iftikhar2021}:
 \clearpage
 
 %%%%
-\section*{Take Home Message}
+%\section*{Take Home Message}
 %\thispagestyle{headings}
 %\markright{Take home message \hfill  \hfill}
-\includegraphics[width=14.5cm]{PCA_CarlRogers.pdf}
+%\includegraphics[width=14.5cm]{PCA_CarlRogers.pdf}
 
 \clearpage
 %%%%%%%
